# RAG-on-Azure-Hands-on-Lab

./: Before-the-HOL.md  HOL-step-by-step-guide-1.md  HOL-step-by-step-guide-2.md  HOL-step-by-step-guide-3.md  HOL-step-by-step-guide-4.md  HOL-step-by-step-guide-5.md  HOL-step-by-step-guide-appendix.md  HOL-step-by-step-guide.md  README.md
.github/: copilot-instructions.md
.github/workflows/: Deploy-Container-Image.yml  Deploy-Key-Vault.yml  Deploy-Resources.yml
app/csharp/: Dockerfile
app/python/simple/: .env  Dockerfile  main.py  pyproject.toml
app/python/simple/service/: ai_search_service.py  aoai_service.py
app/python/simple/service/helpers/: helper_methods.py
app/python/simple/swagger/model/: chat_response.py
bicep/modules/: ai_search.bicep  bastion_basic.bicep  container_apps.bicep  container_registry.bicep  keyvault.bicep  monitor.bicep  openai.bicep  storageaccount.bicep  virtualnetwork_hub.bicep  virtualnetwork_spoke.bicep  vnetPeering.bicep
bicep/parameters/: ai.bicepparam  bastion.bicepparam  container.bicepparam  keyvault.bicepparam  storageaccount.bicepparam  virtualnetwork_spoke.bicepparam
bicep/templates/: ai.bicep  bastion.bicep  container.bicep
contents/: azure-text-translation-overview.docx  speech-to-text-overview.docx  text-to-speech.docx  translator-language-support.docx  whisper-overview.docx
docs/: index.html  openapi.json
docs/python/: aoai_service.rst  conf.py  index.rst  main.rst
evaluator/: requirements.txt  synthetic_qa_from_document.ipynb
evaluator/util/: common_utils.py
test/: search.http  vectorsearch.http
(+37 files in other folders)
