[tool.poetry]
name = "rag-on-azure-hol"
version = "0.1.0"
description = ""
authors = ["kohei3110 <kk.31108424@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.5"
uvicorn = "^0.32.1"
python-dotenv = "^1.0.1"
openai = "^1.55.1"
requests = "^2.32.3"
azure-search-documents = "^11.5.2"
azure-identity = "^1.19.0"
azure-keyvault-secrets = "^4.9.0"
starlette = "^0.41.3"
azure-ai-inference = {extras = ["opentelemetry"], version = "^1.0.0b6"}
opentelemetry-instrumentation = "^0.49b2"
opentelemetry-distro = "^0.49b2"
opentelemetry-exporter-otlp = "^1.28.2"
azure-monitor-opentelemetry = "^1.6.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
